form added, responsive, error form no visible fixed

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -154,6 +154,8 @@
       
   padding-left: 2.5vw;
   padding-right: 2.5vw;
+  padding-top: 8vh;
+  padding-bottom: 7vh;
   }
 
   .footer form{
